Add section on dataset size and training parameter variations

--- a/classifier/cnn-variations.ipynb
+++ b/classifier/cnn-variations.ipynb
@@ -164,11 +164,9 @@
     "        model = tf.keras.models.load_model(modelpath+filename+\".h5\")\n",
     "    else:\n",
     "        # train model\n",
-    "        f_history = model.fit([pcells_EMB2_channels[pdata_merged.train], \n",
-    "                               pcells_EMB1_flat[pdata_merged.train]],\n",
+    "        f_history = model.fit(pcells_EMB2_channels[pdata_merged.train],\n",
     "                            plabels[pdata_merged.train], \n",
-    "                            validation_data=([pcells_EMB2_channels[pdata_merged.val],\n",
-    "                                              pcells_EMB1_flat[pdata_merged.val]],\n",
+    "                            validation_data=(pcells_EMB2_channels[pdata_merged.val],\n",
     "                                             plabels[pdata_merged.val]),\n",
     "                            epochs=epochs, batch_size=200*ngpu, verbose=2)\n",
     "        f_history = f_history.history\n",
@@ -181,7 +179,7 @@
     "            \n",
     "    # get network scores for the dataset\n",
     "    f_score = model.predict(\n",
-    "        [pcells_EMB2_channels, pcells_EMB1_flat]\n",
+    "        pcells_EMB2_channels\n",
     "    )\n",
     "    \n",
     "    # calculate roc and auc\n",
@@ -426,7 +424,130 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def test_model_2d_dataset_size(model,size,filename='',\n",
+    "               epochs=100):\n",
+    "    '''\n",
+    "    Convenience function for training and calculating\n",
+    "    the area-under-curve for a model using a fraction\n",
+    "    of the full dataset.\n",
+    "    '''\n",
+    "    \n",
+    "    train_max = int(size*len(pcells_EMB2_channels[pdata_merged.train]))\n",
+    "    val_max = int(size*len(pcells_EMB2_channels[pdata_merged.val]))\n",
+    "    test_max = int(size*len(pcells_EMB2_channels[pdata_merged.test]))\n",
+    "    \n",
+    "    # check if model has been trained already\n",
+    "    if Path(modelpath+filename+'.h5').is_file():\n",
+    "        # load model\n",
+    "        model = tf.keras.models.load_model(modelpath+filename+\".h5\")\n",
+    "    else:\n",
+    "        # train model\n",
+    "        f_history = model.fit(pcells_EMB2_channels[pdata_merged.train][:train_max],\n",
+    "                            plabels[pdata_merged.train][:train_max], \n",
+    "                            validation_data=(pcells_EMB2_channels[pdata_merged.val][:val_max],\n",
+    "                                             plabels[pdata_merged.val][:val_max]),\n",
+    "                            epochs=epochs, batch_size=200*ngpu, verbose=2)\n",
+    "        f_history = f_history.history\n",
+    "\n",
+    "        # save trained weights and history\n",
+    "        if(filename != ''):\n",
+    "            model.save(modelpath+filename+\".h5\")\n",
+    "            with open(modelpath+filename +\".history\",'wb') as model_history_file:\n",
+    "                pickle.dump(f_history, model_history_file)\n",
+    "            \n",
+    "    # get network scores for the dataset\n",
+    "    f_score = model.predict(\n",
+    "        pcells_EMB2_channels\n",
+    "    )\n",
+    "    \n",
+    "    # calculate roc and auc\n",
+    "    f_roc_fpr, f_roc_tpr, f_roc_thresh = roc_curve(\n",
+    "        plabels[pdata_merged.test][:,1],\n",
+    "        f_score[pdata_merged.test,1],\n",
+    "        drop_intermediate=False,\n",
+    "    )\n",
+    "    f_roc_auc = auc(f_roc_fpr, f_roc_tpr)\n",
+    "    \n",
+    "    pu.roc_plot([f_roc_fpr], [f_roc_tpr],\n",
+    "            figfile=plotpath+filename+'_roc.pdf',\n",
+    "            labels=['area = {:.3f}'.format(f_roc_auc)],\n",
+    "            extra_lines=[[[0, 1], [0, 1]]],\n",
+    "            title=filename.replace('_','-')+' ROC curve: classification of $\\pi^+$ vs. $\\pi^0$')\n",
+    "    return f_roc_fpr, f_roc_tpr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cnn_model_baseline():\n",
+    "    with strategy.scope():\n",
+    "        input1 = Input(shape=(6, 16, 16), name='input1')\n",
+    "        x = Convolution2D(32, (2,2), activation='relu', data_format = 'channels_first')(input1)\n",
+    "        x = MaxPool2D(pool_size=(2, 2))(x)\n",
+    "        x = Dropout(0.2)(x)\n",
+    "        x = Flatten()(x)\n",
+    "        x = Dense(128, activation='relu')(x)\n",
+    "        x = Dense(64, activation='relu')(x)\n",
+    "        output = Dense(2, activation='softmax')(x)\n",
+    "        model = Model(inputs = [input1], outputs = [output])\n",
+    "        \n",
+    "        # compile model\n",
+    "        model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['acc'])\n",
+    "        return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sizes = [0.2,0.4,0.6,0.8,1.0]\n",
+    "size_fpr = []\n",
+    "size_tpr = []\n",
+    "size_auc = []\n",
+    "for size in sizes:\n",
+    "    fpr, tpr = test_model_2d_dataset_size(cnn_model_baseline(),size,\n",
+    "                                         filename='dsetsize_'+str(size).replace('.',''))\n",
+    "    size_fpr.append(fpr)\n",
+    "    size_tpr.append(tpr)\n",
+    "    size_auc.append(auc(fpr,tpr))\n",
+    "    \n",
+    "pu.roc_plot(size_fpr, size_tpr,\n",
+    "    figfile=plotpath+'dsetsize_roc.pdf',\n",
+    "    labels=['area({}) = {:.3f}'.format(str(s),auc) for s,auc in zip(sizes,size_auc)],\n",
+    "    extra_lines=[[[0, 1], [0, 1]]],\n",
+    "    title='ROC curve over dataset fraction: classification of $\\pi^+$ vs. $\\pi^0$')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = [20,40,60,80,100,150,200]\n",
+    "epoch_fpr = []\n",
+    "epoch_tpr = []\n",
+    "epoch_auc = []\n",
+    "for e in epochs:\n",
+    "    fpr, tpr = test_model_2d_dataset_size(cnn_model_baseline(),1.0,\n",
+    "                                         filename='epochsize_'+str(e),\n",
+    "                                         epochs=e)\n",
+    "    epoch_tpr.append(tpr)\n",
+    "    epoch_fpr.append(fpr)\n",
+    "    epoch_auc.append(auc(fpr,tpr))\n",
+    "    \n",
+    "pu.roc_plot(epoch_fpr, epoch_tpr,\n",
+    "            figfile=plotpath+'epochsize_roc.pdf',\n",
+    "            labels=['area({}) = {:.3f}'.format(str(e),auc) for e,auc in zip(epochs,epoch_auc)],\n",
+    "            extra_lines=[[[0, 1], [0, 1]]],\n",
+    "            title='ROC curves over epochs: classification of $\\pi^+$ vs. $\\pi^0$')"
+   ]
   }
  ],
  "metadata": {
