Fix sampling method for generating smaller training subsets

--- a/classifier/cnn-variations.ipynb
+++ b/classifier/cnn-variations.ipynb
@@ -433,9 +433,12 @@
     "    of the full dataset.\n",
     "    '''\n",
     "    \n",
+    "    rng = np.random.default_rng()\n",
     "    train_max = int(size*len(pcells_EMB2_channels[pdata_merged.train]))\n",
+    "    train_index = rng.choice(len(pcells_EMB2_channels[pdata_merged.train]),size=train_max,replace=False)\n",
+    "    \n",
     "    val_max = int(size*len(pcells_EMB2_channels[pdata_merged.val]))\n",
-    "    test_max = int(size*len(pcells_EMB2_channels[pdata_merged.test]))\n",
+    "    val_index = rng.choice(len(pcells_EMB2_channels[pdata_merged.val]),size=val_max,replace=False)\n",
     "    \n",
     "    # check if model has been trained already\n",
     "    if Path(modelpath+filename+'.h5').is_file():\n",
@@ -443,10 +446,10 @@
     "        model = tf.keras.models.load_model(modelpath+filename+\".h5\")\n",
     "    else:\n",
     "        # train model\n",
-    "        f_history = model.fit(pcells_EMB2_channels[pdata_merged.train][:train_max],\n",
-    "                            plabels[pdata_merged.train][:train_max], \n",
-    "                            validation_data=(pcells_EMB2_channels[pdata_merged.val][:val_max],\n",
-    "                                             plabels[pdata_merged.val][:val_max]),\n",
+    "        f_history = model.fit(pcells_EMB2_channels[pdata_merged.train][train_index],\n",
+    "                            plabels[pdata_merged.train][train_index], \n",
+    "                            validation_data=(pcells_EMB2_channels[pdata_merged.val][val_index],\n",
+    "                                             plabels[pdata_merged.val][val_index]),\n",
     "                            epochs=epochs, batch_size=200*ngpu, verbose=2)\n",
     "        f_history = f_history.history\n",
     "\n",
@@ -521,7 +524,7 @@
     "    figfile=plotpath+'dsetsize_roc.pdf',\n",
     "    labels=['area({}) = {:.3f}'.format(str(s),auc) for s,auc in zip(sizes,size_auc)],\n",
     "    extra_lines=[[[0, 1], [0, 1]]],\n",
-    "    title='ROC curve over dataset fraction: classification of $\\pi^+$ vs. $\\pi^0$')"
+    "    title='ROC curve: classification of $\\pi^+$ vs. $\\pi^0$')"
    ]
   },
   {
