Add fix for summing all clusters in each event

--- a/classifier/input-update.ipynb
+++ b/classifier/input-update.ipynb
@@ -40,6 +40,7 @@
     "import scipy\n",
     "import pandas as pd\n",
     "import uproot as ur\n",
+    "import awkward as ak\n",
     "import atlas_mpl_style as ampl\n",
     "\n",
     "ampl.use_atlas_style()\n",
@@ -8267,7 +8268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8277,7 +8278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8393,7 +8394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9080,6 +9081,151 @@
     "\n",
     "    plt.savefig(plotpath+'average_centred_'+layer+'.pdf')\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Indexing Fix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_cell_images(input_file, sampling_layers, c_info=None,\n",
+    "                       eta_range=0.4, phi_range=0.4, print_frequency=100,\n",
+    "                       max_events=None, chunk_size=100000):\n",
+    "    '''Generates images from a 'graph' format input file.\n",
+    "    The output is a dictionary with the following structure:\n",
+    "      images[layer][event_index][eta_index][phi_index]\n",
+    "    The arguments are as follows:\n",
+    "      input_file: path to the desired input file\n",
+    "      sampling_layers: a dict which specifies which layers should\n",
+    "                       have images generated for them; this dict\n",
+    "                       should have entries of the form\n",
+    "                         (int)cell_geo_sampling : 'LayerName'\n",
+    "      c_info: either a path to a root file which contains the\n",
+    "              'CellGeo' tree, or a cell_info object; defaults\n",
+    "              to using input_file to create a cell_info object\n",
+    "              if not provided\n",
+    "      eta/phi_range: full width of the 'window' around cluster\n",
+    "                     centres to render images in; cells outside\n",
+    "                     this window will be ignored\n",
+    "      print_frequency: progress printout will be displayed every\n",
+    "                       integer multiple of this parameter\n",
+    "    '''\n",
+    "    \n",
+    "    if(c_info==None):\n",
+    "        ci = cell_info(input_file)\n",
+    "    elif(isinstance(c_info,str)):\n",
+    "        ci = cell_info(c_info)\n",
+    "    elif(isinstance(c_info,cell_info)):\n",
+    "        ci = c_info\n",
+    "    else:\n",
+    "        raise ValueError('Invalid argument for c_info: must be cell_info object or path to a root file with the CellGeo tree.')\n",
+    "    \n",
+    "    with ur.open(input_file) as ifile:\n",
+    "        entries = ifile['EventTree'].num_entries\n",
+    "        \n",
+    "        if(max_events==None):\n",
+    "            max_events = entries\n",
+    "        chunk_size = min(chunk_size,max_events)\n",
+    "    \n",
+    "        eta_min = -1*eta_range/2.0\n",
+    "        phi_min = -1*phi_range/2.0\n",
+    "\n",
+    "        end_index = max_events//chunk_size-1\n",
+    "        n_clus = 0\n",
+    "        for chunk_index,pdata in enumerate(ifile['EventTree'].iterate(['cluster_cell_ID'],step_size=chunk_size)):\n",
+    "            n_clus += sum(ak.num(pdata['cluster_cell_ID']))\n",
+    "\n",
+    "            if(chunk_index >= end_index):\n",
+    "                break\n",
+    "        \n",
+    "        pcells = {\n",
+    "            layer : np.zeros((n_clus,meta['len_eta'],meta['len_phi']))\n",
+    "            for layer,meta in mu.cell_meta.items()\n",
+    "        }\n",
+    "\n",
+    "#         print(chunk_size,max_events,end_index)\n",
+    "        clus_index = 0\n",
+    "        for chunk_index, pdata in enumerate(ifile['EventTree'].iterate(\n",
+    "            ['cluster_cell_ID', 'cluster_cell_E',\n",
+    "             'cluster_E', 'cluster_Eta', 'cluster_Phi'],step_size=chunk_size)):\n",
+    "            \n",
+    "            if(chunk_index == end_index):\n",
+    "                if( max_events % chunk_size == 0):\n",
+    "                    n_events = chunk_size\n",
+    "                else:\n",
+    "                    n_events = max_events % chunk_size\n",
+    "            else:\n",
+    "                n_events = chunk_size\n",
+    "            print('chunk {}, {} events'.format(chunk_index,n_events))\n",
+    "            for evt in range(n_events):\n",
+    "                if((evt+1)%print_frequency==0):\n",
+    "                    print('Event {}/{}'.format(evt+1,max_events))\n",
+    "\n",
+    "                for clus in range(len(pdata['cluster_cell_ID'][evt])):\n",
+    "                    c_eta, c_phi = 999, 999 # dummy large values\n",
+    "                    valid_cells = []\n",
+    "\n",
+    "                    # first find the cell closest to the cluster centre\n",
+    "                    for cell in range(len(pdata['cluster_cell_ID'][evt][clus])):\n",
+    "                        c_info = ci[pdata['cluster_cell_ID'][evt][clus][cell]]\n",
+    "                        if(\n",
+    "                           dist_sq(\n",
+    "                               c_info['cell_geo_eta']-pdata['cluster_Eta'][evt][clus],\n",
+    "                               c_info['cell_geo_phi']-pdata['cluster_Phi'][evt][clus]) < \n",
+    "                           dist_sq(\n",
+    "                               c_eta-pdata['cluster_Eta'][evt][clus],\n",
+    "                               c_phi-pdata['cluster_Phi'][evt][clus])\n",
+    "                          ):\n",
+    "                            c_eta = c_info['cell_geo_eta']\n",
+    "                            c_phi = c_info['cell_geo_phi']\n",
+    "\n",
+    "\n",
+    "                        # cache index of cells in the layers of interest\n",
+    "                        if c_info['cell_geo_sampling'] in sampling_layers:\n",
+    "                            valid_cells.append(cell)\n",
+    "\n",
+    "                    # now add the contributions of cells within the eta/phi\n",
+    "                    # window of that central cell\n",
+    "                    for cell in valid_cells:\n",
+    "                        c_info = ci[pdata['cluster_cell_ID'][evt][clus][cell]]\n",
+    "                        layer = sampling_layers[c_info['cell_geo_sampling']]\n",
+    "\n",
+    "                        # calculate eta/phi bins using the formula\n",
+    "                        #   bin = floor( (x-x_min) * nbins / x_range )\n",
+    "                        eta_bin = int(\n",
+    "                            (c_info['cell_geo_eta']-c_eta-eta_min) *\n",
+    "                            mu.cell_meta[layer]['len_eta'] / eta_range\n",
+    "                        )\n",
+    "                        phi_bin = int(\n",
+    "                            (c_info['cell_geo_phi']-c_phi-phi_min) *\n",
+    "                            mu.cell_meta[layer]['len_phi'] / phi_range\n",
+    "                        )\n",
+    "\n",
+    "                        # discard cells outside the eta/phi window\n",
+    "                        if(eta_bin<0 or\n",
+    "                           eta_bin>=mu.cell_meta[layer]['len_eta'] or\n",
+    "                           phi_bin<0 or\n",
+    "                           phi_bin>=mu.cell_meta[layer]['len_phi']):\n",
+    "                            continue\n",
+    "\n",
+    "                        pcells[layer][clus_index][eta_bin][phi_bin] += pdata['cluster_cell_E'][evt][clus][cell] / pdata['cluster_E'][evt][clus]\n",
+    "                        # note: 'cluster_E' includes energies from cells with <5 MeV, which are not\n",
+    "                        # included in this dataset, so the energy fraction will be slightly off\n",
+    "\n",
+    "                    clus_index += 1\n",
+    "                    \n",
+    "            if(chunk_index >= end_index):\n",
+    "                break\n",
+    "\n",
+    "        return pcells"
    ]
   },
   {
@@ -9906,23 +10052,256 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_cell_images(input_file, sampling_layers, c_info=None,\n",
+    "                       eta_range=0.4, phi_range=0.4, print_frequency=100,\n",
+    "                       max_events=None, chunk_size=100000):\n",
+    "    '''Generates images from a 'graph' format input file.\n",
+    "    The output is a dictionary with the following structure:\n",
+    "      images[layer][event_index][eta_index][phi_index]\n",
+    "    The arguments are as follows:\n",
+    "      input_file: path to the desired input file\n",
+    "      sampling_layers: a dict which specifies which layers should\n",
+    "                       have images generated for them; this dict\n",
+    "                       should have entries of the form\n",
+    "                         (int)cell_geo_sampling : 'LayerName'\n",
+    "      c_info: either a path to a root file which contains the\n",
+    "              'CellGeo' tree, or a cell_info object; defaults\n",
+    "              to using input_file to create a cell_info object\n",
+    "              if not provided\n",
+    "      eta/phi_range: full width of the 'window' around cluster\n",
+    "                     centres to render images in; cells outside\n",
+    "                     this window will be ignored\n",
+    "      print_frequency: progress printout will be displayed every\n",
+    "                       integer multiple of this parameter\n",
+    "    '''\n",
+    "    \n",
+    "    if(c_info==None):\n",
+    "        ci = cell_info(input_file)\n",
+    "    elif(isinstance(c_info,str)):\n",
+    "        ci = cell_info(c_info)\n",
+    "    elif(isinstance(c_info,cell_info)):\n",
+    "        ci = c_info\n",
+    "    else:\n",
+    "        raise ValueError('Invalid argument for c_info: must be cell_info object or path to a root file with the CellGeo tree.')\n",
+    "    \n",
+    "    with ur.open(input_file) as ifile:\n",
+    "        entries = ifile['EventTree'].num_entries\n",
+    "        \n",
+    "        if(max_events==None):\n",
+    "            max_events = entries\n",
+    "        chunk_size = min(chunk_size,max_events)\n",
+    "    \n",
+    "        eta_min = -1*eta_range/2.0\n",
+    "        phi_min = -1*phi_range/2.0\n",
+    "\n",
+    "        n_clus = 0\n",
+    "        for pdata in ifile['EventTree'].iterate(['cluster_cell_ID'],step_size=chunk_size):\n",
+    "            n_clus += sum(ak.num(pdata['cluster_cell_ID']))\n",
+    "\n",
+    "        pcells = {\n",
+    "            layer : np.zeros((n_clus,meta['len_eta'],meta['len_phi']))\n",
+    "            for layer,meta in mu.cell_meta.items()\n",
+    "        }\n",
+    "\n",
+    "        end_index = max_events//chunk_size-1\n",
+    "#         print(chunk_size,max_events,end_index)\n",
+    "        clus_index = 0\n",
+    "        for chunk_index, pdata in enumerate(ifile['EventTree'].iterate(\n",
+    "            ['cluster_cell_ID', 'cluster_cell_E',\n",
+    "             'cluster_E', 'cluster_Eta', 'cluster_Phi'],step_size=chunk_size)):\n",
+    "            \n",
+    "            if(chunk_index == end_index):\n",
+    "                if( max_events % chunk_size == 0):\n",
+    "                    n_events = chunk_size\n",
+    "                else:\n",
+    "                    n_events = max_events % chunk_size\n",
+    "            else:\n",
+    "                n_events = chunk_size\n",
+    "            print('chunk {}, {} events'.format(chunk_index,n_events))\n",
+    "            for evt in range(n_events):\n",
+    "                if((evt+1)%print_frequency==0):\n",
+    "                    print('Event {}/{}'.format(evt+1,max_events))\n",
+    "\n",
+    "                for clus in range(len(pdata['cluster_cell_ID'][evt])):\n",
+    "                    c_eta, c_phi = 999, 999 # dummy large values\n",
+    "                    valid_cells = []\n",
+    "\n",
+    "                    # first find the cell closest to the cluster centre\n",
+    "                    for cell in range(len(pdata['cluster_cell_ID'][evt][clus])):\n",
+    "                        c_info = ci[pdata['cluster_cell_ID'][evt][clus][cell]]\n",
+    "                        if(\n",
+    "                           dist_sq(\n",
+    "                               c_info['cell_geo_eta']-pdata['cluster_Eta'][evt][clus],\n",
+    "                               c_info['cell_geo_phi']-pdata['cluster_Phi'][evt][clus]) < \n",
+    "                           dist_sq(\n",
+    "                               c_eta-pdata['cluster_Eta'][evt][clus],\n",
+    "                               c_phi-pdata['cluster_Phi'][evt][clus])\n",
+    "                          ):\n",
+    "                            c_eta = c_info['cell_geo_eta']\n",
+    "                            c_phi = c_info['cell_geo_phi']\n",
+    "\n",
+    "\n",
+    "                        # cache index of cells in the layers of interest\n",
+    "                        if c_info['cell_geo_sampling'] in sampling_layers:\n",
+    "                            valid_cells.append(cell)\n",
+    "\n",
+    "                    # now add the contributions of cells within the eta/phi\n",
+    "                    # window of that central cell\n",
+    "                    for cell in valid_cells:\n",
+    "                        c_info = ci[pdata['cluster_cell_ID'][evt][clus][cell]]\n",
+    "                        layer = sampling_layers[c_info['cell_geo_sampling']]\n",
+    "\n",
+    "                        # calculate eta/phi bins using the formula\n",
+    "                        #   bin = floor( (x-x_min) * nbins / x_range )\n",
+    "                        eta_bin = int(\n",
+    "                            (c_info['cell_geo_eta']-c_eta-eta_min) *\n",
+    "                            mu.cell_meta[layer]['len_eta'] / eta_range\n",
+    "                        )\n",
+    "                        phi_bin = int(\n",
+    "                            (c_info['cell_geo_phi']-c_phi-phi_min) *\n",
+    "                            mu.cell_meta[layer]['len_phi'] / phi_range\n",
+    "                        )\n",
+    "\n",
+    "                        # discard cells outside the eta/phi window\n",
+    "                        if(eta_bin<0 or\n",
+    "                           eta_bin>=mu.cell_meta[layer]['len_eta'] or\n",
+    "                           phi_bin<0 or\n",
+    "                           phi_bin>=mu.cell_meta[layer]['len_phi']):\n",
+    "                            continue\n",
+    "\n",
+    "                        pcells[layer][clus_index][eta_bin][phi_bin] += pdata['cluster_cell_E'][evt][clus][cell] / pdata['cluster_E'][evt][clus]\n",
+    "                        # note: 'cluster_E' includes energies from cells with <5 MeV, which are not\n",
+    "                        # included in this dataset, so the energy fraction will be slightly off\n",
+    "                        \n",
+    "                        clus_index+=1\n",
+    "                        \n",
+    "            if(chunk_index >= end_index):\n",
+    "                break\n",
+    "\n",
+    "        return pcells"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'4.0.4'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "105693\n",
+      "105586\n",
+      "105335\n",
+      "105548\n",
+      "105212\n",
+      "105128\n",
+      "105061\n",
+      "105005\n",
+      "104770\n",
+      "104618\n",
+      "105210\n",
+      "105460\n",
+      "105422\n",
+      "105062\n",
+      "105098\n",
+      "105224\n",
+      "105009\n",
+      "105388\n",
+      "105230\n",
+      "105672\n",
+      "105167\n",
+      "105104\n",
+      "105463\n",
+      "105511\n",
+      "105344\n",
+      "105031\n",
+      "105400\n",
+      "105304\n",
+      "106407\n",
+      "104896\n",
+      "104722\n",
+      "105019\n",
+      "105047\n",
+      "105008\n",
+      "105713\n",
+      "105397\n",
+      "104421\n",
+      "105613\n",
+      "105467\n",
+      "105409\n",
+      "104872\n",
+      "105307\n",
+      "105023\n",
+      "105629\n",
+      "105150\n",
+      "105705\n",
+      "105038\n",
+      "105469\n",
+      "105101\n",
+      "105772\n",
+      "104980\n",
+      "105248\n",
+      "105047\n",
+      "105056\n",
+      "104796\n",
+      "105659\n",
+      "104828\n",
+      "105004\n",
+      "105038\n",
+      "105785\n",
+      "105716\n",
+      "105863\n",
+      "105249\n",
+      "105070\n",
+      "105242\n",
+      "105543\n",
+      "105764\n",
+      "105694\n",
+      "105005\n",
+      "105214\n",
+      "104954\n",
+      "105178\n",
+      "105217\n",
+      "105601\n",
+      "105175\n",
+      "105903\n",
+      "104871\n",
+      "105415\n",
+      "105492\n",
+      "105221\n",
+      "105175\n",
+      "105297\n",
+      "104888\n",
+      "105447\n",
+      "104926\n",
+      "105048\n",
+      "105636\n",
+      "105183\n",
+      "105675\n",
+      "105155\n",
+      "105468\n",
+      "104884\n",
+      "105054\n",
+      "105228\n",
+      "105568\n",
+      "105671\n",
+      "105500\n",
+      "105664\n",
+      "104874\n",
+      "105342\n",
+      "10527751\n"
+     ]
     }
    ],
    "source": [
-    "import uproot\n",
-    "uproot.__version__"
+    "pcells = create_cell_images(inputpath+inputfile,sampling_layers,c_info=ci)"
    ]
   },
   {
