Update final code section with indexing fix

--- a/classifier/input-update.ipynb
+++ b/classifier/input-update.ipynb
@@ -9097,7 +9097,7 @@
    "outputs": [],
    "source": [
     "def create_cell_images(input_file, sampling_layers, c_info=None,\n",
-    "                       eta_range=0.4, phi_range=0.4, print_frequency=100,\n",
+    "                       eta_range=0.4, phi_range=0.4, print_frequency=1000,\n",
     "                       max_events=None, chunk_size=100000):\n",
     "    '''Generates images from a 'graph' format input file.\n",
     "    The output is a dictionary with the following structure:\n",
@@ -10057,7 +10057,7 @@
    "outputs": [],
    "source": [
     "def create_cell_images(input_file, sampling_layers, c_info=None,\n",
-    "                       eta_range=0.4, phi_range=0.4, print_frequency=100,\n",
+    "                       eta_range=0.4, phi_range=0.4, print_frequency=1000,\n",
     "                       max_events=None, chunk_size=100000):\n",
     "    '''Generates images from a 'graph' format input file.\n",
     "    The output is a dictionary with the following structure:\n",
@@ -10098,16 +10098,19 @@
     "        eta_min = -1*eta_range/2.0\n",
     "        phi_min = -1*phi_range/2.0\n",
     "\n",
+    "        end_index = max_events//chunk_size-1\n",
     "        n_clus = 0\n",
-    "        for pdata in ifile['EventTree'].iterate(['cluster_cell_ID'],step_size=chunk_size):\n",
+    "        for chunk_index,pdata in enumerate(ifile['EventTree'].iterate(['cluster_cell_ID'],step_size=chunk_size)):\n",
     "            n_clus += sum(ak.num(pdata['cluster_cell_ID']))\n",
     "\n",
+    "            if(chunk_index >= end_index):\n",
+    "                break\n",
+    "        \n",
     "        pcells = {\n",
     "            layer : np.zeros((n_clus,meta['len_eta'],meta['len_phi']))\n",
     "            for layer,meta in mu.cell_meta.items()\n",
     "        }\n",
     "\n",
-    "        end_index = max_events//chunk_size-1\n",
     "#         print(chunk_size,max_events,end_index)\n",
     "        clus_index = 0\n",
     "        for chunk_index, pdata in enumerate(ifile['EventTree'].iterate(\n",
@@ -10176,9 +10179,9 @@
     "                        pcells[layer][clus_index][eta_bin][phi_bin] += pdata['cluster_cell_E'][evt][clus][cell] / pdata['cluster_E'][evt][clus]\n",
     "                        # note: 'cluster_E' includes energies from cells with <5 MeV, which are not\n",
     "                        # included in this dataset, so the energy fraction will be slightly off\n",
-    "                        \n",
-    "                        clus_index+=1\n",
-    "                        \n",
+    "\n",
+    "                    clus_index += 1\n",
+    "                    \n",
     "            if(chunk_index >= end_index):\n",
     "                break\n",
     "\n",
